<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstPrototype</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">hello world</string>
    
    <string name="email_content">e-mail content</string>
    <string name="parsed_json">parsed JSON</string>
    <string name="message_to_pebble">message to Pebble</string>
    <string name="fetch">fetch</string>
    <string name="parse">parse</string>
    <string name="activate">activate</string>
    <string name="automatic">automatic</string>
    
    <string name="default_pipeline">       
        {"@type":"org.apps8os.contextlogger3.android.pipeline.MainPipeline",
        "name":"default",
        "archive": {
                "@schedule": {"interval": 500},
                "@password": "justdoit"
        },
        "version":1,
        "data":[
        	"org.apps8os.contextlogger3.android.probe.AppProbe",
        	"org.apps8os.contextlogger3.android.probe.GoogleLocationProbe",
           {"@type": edu.mit.media.funf.probe.builtin.WifiProbe",
           	"@schedule": {"interval": 500, "duration": 10, "strict": true}
           },
           {"@type": "edu.mit.media.funf.probe.builtin.AccelerometerSensorProbe",
            "@schedule": {"interval": 500, "duration": 5, "strict": true}
           },
           "edu.mit.media.funf.probe.builtin.LocationProbe"
        ]
       }
     </string>
    
    <string name="hard_coded_json">
{
 "date": "Sunday 22.12.2013",
 "start": "Konemies, Espoo",
 "dest": "Suomenlinna open-air theatre, Helsinki",
 "arrivalTime": "16:28",
 "segments": [
  {
   "startTime": "15:14",
   "startPoint": "Konemies, Espoo",
   "mode": "Walking 0,1 km",
   "waypoints": [
    {
     "time": "15:14",
     "name": "Konemies"
    }
   ]
  },
  {
   "startTime": "15:14",
   "startPoint": "Konemies",
   "mode": "103T",
   "waypoints": [
    {
     "time": "15:14",
     "name": "Konemies",
     "stopCode": "E2213"
    },
    {
     "time": "15:30",
     "name": "Länsiväylä",
     "stopCode": "1014"
    }
   ]
  },
  {
   "startTime": "15:30",
   "startPoint": "Länsiväylä",
   "mode": "Walking 0,2 km",
   "waypoints": [
    {
     "time": "15:30",
     "name": "Länsiväylä"
    },
    {
     "time": "15:33",
     "name": "Ruoholahti"
    }
   ]
  },
  {
   "startTime": "15:40",
   "startPoint": "Ruoholahti",
   "mode": "metro",
   "waypoints": [
    {
     "time": "15:40",
     "name": "Ruoholahti",
     "stopCode": "0012"
    },
    {
     "time": "15:44",
     "name": "Kaisaniemi",
     "stopCode": "0015"
    }
   ]
  },
  {
   "startTime": "15:44",
   "startPoint": "Kaisaniemi",
   "mode": "Walking 0,9 km",
   "waypoints": [
    {
     "time": "15:44",
     "name": "Kaisaniemi"
    },
    {
     "time": "15:56",
     "name": "Kauppatori"
    }
   ]
  },
  {
   "startTime": "16:00",
   "startPoint": "Kauppatori",
   "mode": "ferry",
   "waypoints": [
    {
     "time": "16:00",
     "name": "Kauppatori",
     "stopCode": "0099"
    },
    {
     "time": "16:15",
     "name": "Suomenlinna",
     "stopCode": "0098"
    }
   ]
  },
  {
   "startTime": "16:15",
   "startPoint": "Suomenlinna",
   "mode": "Walking 1 km",
   "waypoints": [
    {
     "time": "16:15",
     "name": "Suomenlinna"
    }
   ]
  }
 ]
}
    </string>
    
    <string name="hard_coded_journey">hard_coded_journey.txt</string>

</resources>
