<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
        
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="306dp" >

        <TextView
            android:id="@+id/textLabel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/email_content" />
    
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textLabel1"
            android:layout_below="@+id/textLabel1"
            android:layout_marginBottom="32dp"
            android:background="@drawable/textview1border"
            android:maxWidth="168dp"
            android:text="@string/hello_world" />
        
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/textLabel1"
            android:layout_marginRight="22dp"
            android:onClick="onClick_fetch"
            android:text="@string/fetch" />
    
        <TextView
            android:id="@+id/textLabel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textLabel1"
            android:layout_below="@+id/textView1"
            android:layout_marginBottom="16dp"
            android:text="@string/parsed_json" />
    
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textLabel1"
            android:layout_below="@+id/textLabel2"
            android:layout_marginBottom="32dp"
            android:background="@drawable/textview1border"
            android:maxWidth="168dp"
            android:text="@string/hello_world" />
        
        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/button1"
            android:layout_alignTop="@+id/textLabel2"
            android:onClick="onClick_parse"
            android:text="@string/parse" />
        
        <TextView
            android:id="@+id/textLabel3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textLabel1"
            android:layout_below="@+id/textView2"
            android:layout_marginBottom="16dp"
            android:text="@string/message_to_pebble" />
        
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textLabel1"
            android:layout_below="@+id/textLabel3"
            android:layout_marginBottom="32dp"
            android:background="@drawable/textview1border"
            android:maxWidth="168dp"
            android:text="@string/hello_world" />
        
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/button1"
            android:layout_alignTop="@+id/textLabel3"
            android:onClick="onClick_activate"
            android:text="@string/activate" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textLabel3"
            android:layout_below="@+id/button3"
            android:layout_marginTop="16dp"
            android:onClick="onClick_automatic"
            android:text="@string/automatic" />

    </RelativeLayout>
</ScrollView>